tests/fail/repeat_provoq_fail.avm
push int8(10)
rep 3
pop
rep 5
exit
;;
